--- a/base-server/zuul-server/src/main/resources/application.yml
+++ b/base-server/zuul-server/src/main/resources/application.yml
@@ -10,6 +10,13 @@ eureka:
       defaultZone: http://localhost:8761/eureka/
 zuul:
   routes:
-      path: /admin/**
+      admin: /admin/**
       serviceId: admin-server
 
+#配置超时时间(*****注意事项*********)
+  host:
+    connect-timeout-millis: 10000
+    socket-timeout-millis: 10000
+ribbon:
+  ConnectTimeout: 10000
+  ReadTimeout: 10000
