--- a/base-server/feign-server/pom.xml
+++ b/base-server/feign-server/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.hawk.base.feign</groupId>
 	<artifactId>feign-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>pom</packaging>
 
 	<name>feign-server</name>
 	<description>负载均衡模块</description>
@@ -15,7 +15,6 @@
 		<groupId>com.hawk.base</groupId>
 		<artifactId>base-server</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 
