--- a/admin-server/src/main/resources/application.yml
+++ b/admin-server/src/main/resources/application.yml
@@ -14,6 +14,18 @@ spring:
     username: hawk
     password: 123456
     driver-class-name: com.mysql.jdbc.Driver
+  redis: #Redis 配置
+    database: 0  #Redis数据库索引(默认为0)
+    host: 127.0.0.1 #Redis服务器地址
+    port: 6379 #Redis服务器连接端口
+    password: #Redis服务器连接密码(默认为空)
+    timeout: 60s # 数据库连接超时时间，2.0 中该参数的类型为Duration，这里在配置的时候需要指明单位
+    jedis: # 连接池配置，2.0中直接使用jedis或者lettuce配置连接池
+      pool:
+        max-active:  20 #连接池最大连接数(使用负值表示没有限制)
+        max-idle: 10 #连接池最大空闲连接数
+        max-wait: 100s #连接池最大阻塞等待时间(使用负值表示没有限制)
+        min-idle: 5 #连接池最小空闲连接
 
 mybatis:
   type-aliases-package: com.hawk.admin.adminserver.entity
