--- a/pom.xml
+++ b/pom.xml
@@ -92,7 +92,7 @@
 
 
             <!--配置generator-->
-            <plugin>
+  <!--          <plugin>
                 <groupId>org.mybatis.generator</groupId>
                 <artifactId>mybatis-generator-maven-plugin</artifactId>
                 <version>1.3.5</version>
@@ -119,19 +119,19 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <!--允许移动生成的文件 -->
+                    允许移动生成的文件
                     <verbose>true</verbose>
-                    <!-- 是否覆盖 -->
+                     是否覆盖
                     <overwrite>true</overwrite>
-                    <!-- 自动生成的配置 -->
+                     自动生成的配置
                     <configurationFile>src/main/resources/mybatis-generator.xml </configurationFile>
-                    <!--配置文件的路径-->
+                    配置文件的路径
                     <configurationFile>src/main/resources/generator/generatorConfig.xml</configurationFile>
                     <overwrite>true</overwrite>
                 </configuration>
 
             </plugin>
-
+-->
         </plugins>
 
     </build>
