--- a/base-server/eureka-server/pom.xml
+++ b/base-server/eureka-server/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>com.hawk.base.eureka</groupId>
 	<artifactId>eureka-server</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>pom</packaging>
+	<packaging>jar</packaging>
 
 	<name>eureka-server</name>
 	<description>服务注册中心模块</description>
